# murmur

./: CLAUDE.md  CONTRIBUTING.md  PRIVACY_POLICY.md  README.md  grep.exe.stackdump
backend/app/: chat_processor.py  db.py  main.py  schema_validator.py
backend/mcp_server/: README.md  requirements.txt  server.py
docs/: BUILDING.md  GPU_ACCELERATION.md  audit-2026-07-11.md  audit-remediation-plan.md
frontend/: README.md  clean_build.sh  clean_build_windows.bat  clean_run_windows.bat  package.json  setup_windows.ps1  tailwind.config.ts
frontend/scripts/: stage-sherpa-dlls.mjs  tauri-auto.js
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/migrations/: 20260428200000_add_chat_messages.sql  20260707120000_add_meeting_attendees.sql  20260713120000_add_soft_delete.sql  20260723120000_add_meeting_attachments.sql
frontend/src-tauri/src/: download_integrity.rs  export.rs  lib.rs  main.rs  tray.rs
frontend/src-tauri/src/api/: api.rs  attachments_api.rs  chat_api.rs  mod.rs
frontend/src-tauri/src/audio/: common.rs  pipeline.rs  recording_commands.rs  recording_manager.rs  recording_saver.rs  recovery_scan.rs
frontend/src-tauri/src/audio/transcription/: worker.rs
frontend/src-tauri/src/database/: commands.rs  manager.rs  mod.rs  models.rs  setup.rs  test_support.rs
frontend/src-tauri/src/database/repositories/: attachment.rs  chat.rs  meeting.rs  mod.rs  transcript.rs
frontend/src-tauri/src/diarization/: localpro.rs  models.rs
frontend/src-tauri/src/mcp/: tools.rs
frontend/src-tauri/src/openai/: chatgpt_oauth.rs  mod.rs  openai.rs
frontend/src-tauri/src/parakeet_engine/: parakeet_engine.rs
frontend/src-tauri/src/summary/: attachment_context.rs  llm_client.rs  mod.rs  processor.rs  service.rs
frontend/src-tauri/src/summary/summary_engine/: model_manager.rs  models.rs
frontend/src-tauri/src/whisper_engine/: whisper_engine.rs
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/_components/: SettingsModal.tsx
frontend/src/app/meeting-details/: page-content.tsx  page.tsx
frontend/src/app/meetings/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: About.tsx  AudioBackendSelector.tsx  AudioLevelMeter.tsx  BetaSettings.tsx  BluetoothPlaybackWarning.tsx  BuiltInModelManager.tsx  ChunkProgressDisplay.tsx  CloudBadge.tsx  ComplianceNotification.tsx  ConfidenceIndicator.tsx  DeviceSelection.tsx  DiarizationSettings.tsx  EditableTitle.tsx  EmptyStateSummary.tsx  GlobalEgressIndicator.tsx  LanguageSelection.tsx  Logo.tsx  MessageToast.tsx  ModelDownloadProgress.tsx  ModelSettingsModal.tsx  ParakeetModelManager.tsx  PreferenceSettings.tsx  RecordingControls.tsx  RecordingSettings.tsx  SummaryLanguageSettings.tsx  SummaryModelSettings.tsx  TranscriptSettings.tsx  TranscriptView.tsx  VirtualizedTranscriptView.tsx  WhisperModelManager.tsx
frontend/src/components/AISummary/: Block.tsx  BlockNoteSummaryView.tsx  Section.tsx  index.tsx
frontend/src/components/ConfirmationModal/: confirmation-modal.tsx
frontend/src/components/DatabaseImport/: HomebrewDatabaseDetector.tsx  LegacyDatabaseImport.tsx
frontend/src/components/ImportAudio/: ImportAudioDialog.tsx  ImportDropOverlay.tsx
frontend/src/components/MeetingDetails/: AttachmentsPanel.tsx  ChatPanel.tsx  ExportMarkdownDialog.tsx  RediarizeDialog.tsx  RetranscribeDialog.tsx  SummaryGeneratorButtonGroup.tsx  SummaryPanel.tsx  SummaryUpdaterButtonGroup.tsx  TranscriptButtonGroup.tsx  TranscriptEditorToolbar.tsx  TranscriptPanel.tsx
frontend/src/components/Sidebar/: SidebarProvider.tsx  index.tsx
frontend/src/components/TranscriptRecovery/: TranscriptRecovery.tsx
frontend/src/components/WindowChrome/: Titlebar.tsx
frontend/src/components/brand/: Logomark.tsx  Wordmark.tsx
frontend/src/components/onboarding/: OnboardingContainer.tsx
frontend/src/components/onboarding/shared/: PermissionRow.tsx  ProgressIndicator.tsx  StatusIndicator.tsx
frontend/src/components/onboarding/steps/: DownloadProgressStep.tsx  PermissionsStep.tsx  SetupOverviewStep.tsx  WelcomeStep.tsx
frontend/src/components/shared/: DownloadProgressToast.tsx
frontend/src/components/ui/: dialog.tsx
frontend/src/contexts/: ConfigContext.tsx  FileDropContext.tsx  TranscriptContext.tsx
frontend/src/hooks/: useTranscriptRecovery.ts
frontend/src/hooks/meeting-details/: useAttachments.ts  useCopyOperations.ts  useExportOperations.ts  useMeetingChat.ts
frontend/src/lib/: attachmentsApi.ts  meetingMarkdown.ts  providerLocality.ts  speakerLabel.ts
frontend/src/services/: configService.ts  indexedDBService.ts
frontend/src/types/: index.ts
